<resources>
    <string name="app_name">Мои планы</string>
    <string name="plans">Планы</string>
    <string name="list_of_plans">Список планов</string>
    <string name="calendar">Календарь</string>
    <string name="add_new_plan">Добавить новый план</string>
    <string name="importance_of_task">Важность задачи</string>
    <string name="input_your_plan">Введите ваш план</string>
    <string name="low">Низкий</string>
    <string name="medium">Средний</string>
    <string name="high">Высокий</string>
    <string name="save">Сохранить</string>
    <string name="main_screen">Главный экран</string>
    <string name="fill_in_the_importance">Выберите важность!</string>
    <string name="fill_in_the_text">Напишите план!</string>
    <string name="wo_plans">Планов нет! Выберите день!</string>
    <string name="del_plan">План можно будет удалить свайпом влево или вправо. Изменить план можно нажав на него.</string>
    <string name="last_date">"Прошлая дата: "</string>
    <string name="settings">"Настройки"</string>
    <string name="dark_theme">"Темная тема"</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="yesterday">Вчера</string>
    <string name="add_plan">Добавить план</string>
    <string name="error">Ошибка!</string>
    <string name="input">Заполните поля!!</string>
    <string name="date_chose">Выбрать дату</string>
</resources>