<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/app_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.activity.ChangePlanActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextPlanTitleInChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="12dp"
            android:autofillHints="no"
            android:background="@drawable/frame"
            android:hint="@string/input_your_plan"
            android:inputType="text"
            android:padding="10dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="24sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonLowInChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:background="@drawable/green_background_for_importance"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/low"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:buttonTint="@color/black"
                app:tint="@color/black" />

            <RadioButton
                android:id="@+id/radioButtonMediumInChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/orange_background_for_importance"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/medium"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:buttonTint="@color/black"
                app:tint="@color/black" />

            <RadioButton
                android:id="@+id/radioButtonHighInChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:background="@drawable/red_background_for_importance"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/high"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:buttonTint="@color/black"
                app:tint="@color/black" />
        </RadioGroup>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButtonCalendarInChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/calendar"
            app:srcCompat="@drawable/calendar"
            app:tint="@color/black" />

        <Button
            android:id="@+id/buttonSaveInChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="#1565C0"
            android:padding="8dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:cornerRadius="10dp" />

        <TextView
            android:id="@+id/textViewLastDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_date"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonHomeInChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_button"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/white"
        app:tint="@color/black"
        app:buttonTint="@color/black"
        android:contentDescription="@string/main_screen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>