<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEBE9"
    tools:context=".presentation.ui.activity.PlanActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/black"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/black"
            app:counterTextColor="@color/black"
            app:cursorColor="@color/black"
            app:helperTextTextColor="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:placeholderTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:hint="@string/input_your_plan"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:background="@drawable/green_background_for_importance"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/low"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:buttonTint="@color/black"
                app:tint="@color/black" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/orange_background_for_importance"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/medium"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:buttonTint="@color/black"
                app:tint="@color/black" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:background="@drawable/red_background_for_importance"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/high"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:buttonTint="@color/black"
                app:tint="@color/black" />
        </RadioGroup>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="12dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/date_chose"
                    android:maxWidth="35dp"
                    android:src="@drawable/calendar_lines_svgrepo_com" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_chose"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:alpha="0.5"
            android:backgroundTint="#1565C0"
            android:enabled="false"
            android:padding="8dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:cornerRadius="10dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewHintDeleteChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/del_plan"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>